--- a/.parcelrc
+++ b/.parcelrc
@@ -1,5 +1,6 @@
+{
+"extends": ["@parcel/config-default"],
 "transformers": {
-
- "*.handlebars": ["parcel-transformer-hbs"]
-
+  "*.hbs": ["parcel-transformer-hbs"]
+}
 }
