--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx parcel src/index.html --public-url ./",
+    "dev": "npx parcel src/index.html --public-url /handlerbar/",
     "build": "parcel build src/index.html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
